Revision history for Perl extension Dist::Zilla::PluginBundle::Author::GTERMARS

{{$NEXT}}
    - Add "CheckIssues" dependency to "dist.ini"; forgot to add this here when
      I added the pre-release check back in 0.03

0.05      2021-06-21 10:20:50-07:00 America/Vancouver
    - Bump minimum Perl to v5.20 (matching DZil upstream)

0.04      2021-05-04 09:29:38-07:00 America/Vancouver
    - Fix handling of "script/" dirs for StaticInstall

0.03      2021-01-10 15:29:03-08:00 America/Vancouver
    - Post-release, push branches+tags upstream to Git
    - Pre-release, check for outstanding issues.
    - Moved "Test::Compile" to a "t/" test, instead of "xt/"
    - Pre-release, ensure that a successful GitHub Actions run exists
    - Run "xt/" tests with "--jobs=8"; I've got CPU cores to spare
    - Explicit dependency on Perl v5.14; minimum for DZil
    - Add "EnsureMinimumPerl", to remind me to specify a minimum Perl version
      for all my distributions.

0.02      2020-12-31 11:58:32-08:00 America/Vancouver
    - Exclude `cpanfile` from distribution tarballs
    - Leave `xt/` tests in `xt/`, don't move them to `t/`

0.01      2020-12-30 20:36:56-08:00 America/Vancouver
    - Initial release